# landau-ps

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.org
app/: CMakeLists.txt  main.cxx
docs/: fields.org
grammars/: function.g
include/: cmake_test.hxx  experiment.hxx  field.hxx  force.hxx  freespace.hxx  material.hxx  particle.hxx  simulation.hxx
src/: CMakeLists.txt  Simulation.h  cmake_test.cxx  configurations.cc  configurations.h  field.cc  field.h  particle.cc  particle.h  scalar_field.cc  scalar_field.h  simulation.cxx  simulation.h
src/core/: field.cc  field.h
src/utils/: configurations.cc  configurations.h
tests/: CMakeLists.txt  tests.cxx  tests_fields.cc
